cambios estéticos en la ficha de producto

--- a/project/frontend/src/components/fichaProducto/fichaProducto.module.css
+++ b/project/frontend/src/components/fichaProducto/fichaProducto.module.css
@@ -1,10 +1,31 @@
 .foto{
     flex-grow: 1;
-    background-color: aqua;
+    background-color: cadetblue;
 }
 .datosProducto{
     flex-grow: 2;
-    background-color: green;
+    background-color: grey;
+}
+
+.datosProducto input {
+    border-radius: 25px;
+    margin-bottom: 25px;
+}
+
+.datosProducto button {
+    border-radius: 25px;
+    border:solid 10 px;
+    margin-bottom: 25px;
+    margin-right: 100px;
+    background-color:beige;
+}
+
+.datosProducto textarea {
+    border-radius: 25px;
+    margin-bottom: 25px;
+    background-color:beige;
+    width: 300px;
+    height: 150px;
 }
 
 main{
