--- a/project/frontend/src/components/fichaProducto/fichaProducto.module.css
+++ b/project/frontend/src/components/fichaProducto/fichaProducto.module.css
@@ -5,12 +5,14 @@
 
 .datosProducto{
     flex-grow: 2;
-    background-color: grey;
+    background-color: rgb(202, 155, 155);
 }
 
 .datosProducto input {
     border-radius: 25px;
     margin-bottom: 25px;
+    width:300px;
+    padding:5px;
 }
 
 .datosProducto button {
@@ -24,6 +26,7 @@
 .datosProducto textarea {
     border-radius: 25px;
     margin-bottom: 25px;
+    padding: 10px;
     background-color:beige;
     width: 300px;
     height: 150px;
