añadido funcionalidad de borrar producto

--- a/project/frontend/src/components/barranav/barranav.module.css
+++ b/project/frontend/src/components/barranav/barranav.module.css
@@ -12,6 +12,8 @@
     list-style-type:none;
     display:flex;
     justify-content: space-around;
+    text-decoration: none;
+
 }
 .menu{
     width: 100%;
