--- a/project/frontend/src/components/barranav/barranav.module.css
+++ b/project/frontend/src/components/barranav/barranav.module.css
@@ -13,7 +13,7 @@
     list-style-type:none;
     display:flex;
     justify-content: space-around;
-    text-decoration: none;
+    /*text-decoration: none;*/
 
 }
 .menu{
@@ -24,3 +24,4 @@
     margin-right: 50px;
     border: solid
 }
+
