--- a/project/frontend/src/components/consultas/consultas.module.css
+++ b/project/frontend/src/components/consultas/consultas.module.css
@@ -13,9 +13,13 @@
     background-color:beige;
 }
 .datosProducto{
-    margin: 10px;
+    margin: 0px;
     background-color: rgb(202, 155, 155);
-    height: 85vh;
+    height: 80vh;
+}
+
+.datosForm{
+    margin-left: 10px;
 }
 
 .enlinea{
